fix download resource button and sizing for resource preview on mobile view

--- a/app/static/app/css/global-mobile.css
+++ b/app/static/app/css/global-mobile.css
@@ -120,4 +120,10 @@
         font-size: x-large;
     }
 
+    /* Back button */
+    .back-button {
+        font-size: large;
+        margin: 20px;
+    }
+
 }
